Stock Data/nohup.out
  File "livecharting_3.py", line 22
    global x
    ^
IndentationError: unexpected indent
  File "livecharting_3.py", line 22
    global x
    ^
IndentationError: unexpected indent
  File "livecharting_3.py", line 22
    global x
    ^
IndentationError: unexpected indent
